melhorias no index.html

--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Mentor Bootstrap Template - Index</title>
+    <title>Educandário Jesus Menino</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/favicon.jpg" rel="icon" />
+    <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon" />
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,7 +30,6 @@
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
@@ -48,50 +44,27 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="logo mr-auto"><a href="index.html">Jesus Menino</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <!-- <h1 class="logo mr-auto"><a href="index.html">Jesus Menino</a></h1> -->
+        <a href="index.html" class="logo mr-auto"
+          ><img
+            src="assets/img/LOGO-EJM-AZUL OK.png"
+            alt=""
+            class="img-fluid"
+          />
+          Jesus Menino
+        </a>
 
         <nav class="nav-menu d-none d-lg-block">
           <ul>
             <li class="active"><a href="index.html">Início</a></li>
-            <!-- Home -->
             <li><a href="about.html">Sobre Nós</a></li>
-            <!-- About -->
-            <li><a href="courses.html">Níveis de Ensino</a></li>
-            <!-- Courses -->
             <li><a href="trainers.html">Espaços</a></li>
-            <!-- Trainers -->
+            <li><a href="trainers.html">Nossa Equipe</a></li>
             <li><a href="events.html">Regimento Escolar</a></li>
-            <!-- Events -->
-            <li><a href="pricing.html">Texto para Adicionar</a></li>
-            <!-- Pricing -->
-            <li class="drop-down">
-              <a href="">Texto para Adicionar</a>
-              <!-- Drop Down -->
-              <ul>
-                <li><a href="#">Drop Down 1</a></li>
-                <li class="drop-down">
-                  <a href="#">Deep Drop Down</a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
-              </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Fale Conosco</a></li>
           </ul>
         </nav>
-        <!-- .nav-menu -->
 
-        <a href="courses.html" class="get-started-btn">Get Started</a>
       </div>
     </header>
     <!-- End Header -->
@@ -137,15 +110,26 @@
                 o conhecimento para a comunidade.
               </h3>
               <p class="font-italic">
-                a escola atende com o intuito de formar cidadãos críticos, construtivos e fraternos, contribuindo na qualidade de ensino na sociedade curraisnovense e demais cidades circunvizinhas.               </p>
+                a escola atende com o intuito de formar cidadãos críticos,
+                construtivos e fraternos, contribuindo na qualidade de ensino na
+                sociedade curraisnovense e demais cidades circunvizinhas.
+              </p>
               <ul>
                 <h2>Missão</h2>
                 <li>
-                  <i class="icofont-check-circled"></i> Proporcionar formação integral do aluno, visando um compromisso responsável como agente transformador dentro da sociedade, pautado nos valores humanos e cristãos à luz do Evangelho de forma justa, participativa e libertadora, respeitando as diferenças religiosas. 
+                  <i class="icofont-check-circled"></i> Proporcionar formação
+                  integral do aluno, visando um compromisso responsável como
+                  agente transformador dentro da sociedade, pautado nos valores
+                  humanos e cristãos à luz do Evangelho de forma justa,
+                  participativa e libertadora, respeitando as diferenças
+                  religiosas.
                 </li>
                 <h2>Visão</h2>
                 <li>
-                  <i class="icofont-check-circled"></i> Ser um centro de referência na formação humana, cristã e acadêmica de crianças, adolescentes e jovens da cidade de Currais Novos, com ações integradas escola-família. 
+                  <i class="icofont-check-circled"></i> Ser um centro de
+                  referência na formação humana, cristã e acadêmica de crianças,
+                  adolescentes e jovens da cidade de Currais Novos, com ações
+                  integradas escola-família.
                 </li>
               </ul>
               <!-- <p>
@@ -193,19 +177,13 @@
           <div class="row">
             <div class="col-lg-4 d-flex align-items-stretch">
               <div class="content">
-                <h3>Why Choose Mentor?</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Duis aute irure dolor in reprehenderit Asperiores dolores sed
-                  et. Tenetur quia eos. Autem tempore quibusdam vel
-                  necessitatibus optio ad corporis.
-                </p>
-                <div class="text-center">
-                  <a href="about.html" class="more-btn"
-                    >Learn More <i class="bx bx-chevron-right"></i
-                  ></a>
-                </div>
+                <h3>Por que escolher o Jesus Menino?</h3>
+                <p> Uma escola de Tradição. </p>
+                <p> Educação humanizada. </p>
+                <p> Educação fundamentada nos princípios cristãos. </p>
+                <p> Equipe de professores qualificados. </p>
+                <p> Educação fundamentada nos princípios cristãos. </p>
+                <p> Educação fundamentada nos princípios cristãos. </p>
               </div>
             </div>
             <div
@@ -218,31 +196,40 @@
                   <div class="col-xl-4 d-flex align-items-stretch">
                     <div class="icon-box mt-4 mt-xl-0">
                       <i class="bx bx-receipt"></i>
-                      <h4>Corporis voluptates sit</h4>
+                      <h4>Níveis de Ensino</h4>
                       <p>
-                        Consequuntur sunt aut quasi enim aliquam quae harum
-                        pariatur laboris nisi ut aliquip
+                        Educação Infantil
+                      </p>
+                      <p>
+                        Ensino Fundamental (Anos iníciais)
+                      </p>
+                      <p>
+                        Ensino Fundamental (Anos finais)
+                      </p>
+                      <p>
+                        Ensino Médio
                       </p>
                     </div>
                   </div>
                   <div class="col-xl-4 d-flex align-items-stretch">
                     <div class="icon-box mt-4 mt-xl-0">
                       <i class="bx bx-cube-alt"></i>
-                      <h4>Ullamco laboris ladore pan</h4>
-                      <p>
-                        Excepteur sint occaecat cupidatat non proident, sunt in
-                        culpa qui officia deserunt
-                      </p>
+                      <h4>SER - Serviço de Educação Religiosa</h4>
+                      <p> Carisma das filhas do amor divino. </p>
+                      <p> Acompanhamento Espiritual. </p>
                     </div>
                   </div>
                   <div class="col-xl-4 d-flex align-items-stretch">
                     <div class="icon-box mt-4 mt-xl-0">
                       <i class="bx bx-images"></i>
-                      <h4>Labore consequatur</h4>
-                      <p>
-                        Aut suscipit aut cum nemo deleniti aut omnis. Doloribus
-                        ut maiores omnis facere
-                      </p>
+                      <h4>SEF</h4>
+                      <p> Futsal </p>
+                      <p> Voleibol </p>
+                      <p> Natação </p>
+                      <p> Atletismo </p>
+                      <p> Hisroginástica </p>
+                      <p> Judô </p>
+                      <p> Ballet </p>
                     </div>
                   </div>
                 </div>
@@ -261,73 +248,73 @@
             <div class="col-lg-3 col-md-4">
               <div class="icon-box">
                 <i class="ri-store-line" style="color: #ffbb2c"></i>
-                <h3><a href="">Lorem Ipsum</a></h3>
+                <h3>QUADRA DE ESPORTE</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box">
-                <i class="ri-bar-chart-box-line" style="color: #5578ff"></i>
-                <h3><a href="">Dolor Sitema</a></h3>
+                <i class="ri-store-line" style="color: #5578ff"></i>
+                <h3>QUADRA DE AREIA</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
               <div class="icon-box">
-                <i class="ri-calendar-todo-line" style="color: #e80368"></i>
-                <h3><a href="">Sed perspiciatis</a></h3>
+                <i class=" ri-water-flash-line" style="color: #e80368"></i>
+                <h3>PISCINA</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
               <div class="icon-box">
                 <i class="ri-paint-brush-line" style="color: #e361ff"></i>
-                <h3><a href="">Magni Dolores</a></h3>
+                <h3>LABORATÓRIO DE CIÊNCIA</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
-                <i class="ri-database-2-line" style="color: #47aeff"></i>
-                <h3><a href="">Nemo Enim</a></h3>
+                <i class=" ri-government-line" style="color: #47aeff"></i>
+                <h3>AUDITÓRIO</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
-                <i class="ri-gradienter-line" style="color: #ffa76e"></i>
-                <h3><a href="">Eiusmod Tempor</a></h3>
+                <i class="ri-hospital-line" style="color: #ffa76e"></i>
+                <h3>CAPELA</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="ri-file-list-3-line" style="color: #11dbcf"></i>
-                <h3><a href="">Midela Teren</a></h3>
+                <h3>BIBLIOTECA</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
-                <i class="ri-price-tag-2-line" style="color: #4233ff"></i>
-                <h3><a href="">Pira Neve</a></h3>
+                <i class="ri-store-2-line" style="color: #4233ff"></i>
+                <h3>CANTINA</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
-                <i class="ri-anchor-line" style="color: #b2904f"></i>
-                <h3><a href="">Dirada Pack</a></h3>
+                <i class="ri-auction-line" style="color: #b2904f"></i>
+                <h3>SISTEMA DE ENSINO ÉTICO</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
-                <i class="ri-disc-line" style="color: #b20969"></i>
-                <h3><a href="">Moton Ideal</a></h3>
+                <i class="ri-camera-line" style="color: #b20969"></i>
+                <h3>MONITORAMENTO POR CÂMERAS</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
-                <i class="ri-base-station-line" style="color: #ff5828"></i>
-                <h3><a href="">Verdo Park</a></h3>
+                <i class="ri-emotion-happy-line" style="color: #ff5828"></i>
+                <h3>ASSISTÊNCIA SOCIAL</h3>
               </div>
             </div>
             <div class="col-lg-3 col-md-4 mt-4">
               <div class="icon-box">
                 <i class="ri-fingerprint-line" style="color: #29cc61"></i>
-                <h3><a href="">Flavor Nivelanda</a></h3>
+                <h3>AULAS DE MUSICALIZAÇÃO</h3>
               </div>
             </div>
           </div>
@@ -339,15 +326,15 @@
       <section id="popular-courses" class="courses">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2>Courses</h2>
-            <p>Popular Courses</p>
+            <h2>Pesquisa e Extensão</h2>
+            <p>Projetos</p>
           </div>
 
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="course-item">
                 <img
-                  src="assets/img/course-1.jpg"
+                  src="assets/img/projeto-bilingue.png"
                   class="img-fluid"
                   alt="..."
                 />
@@ -355,16 +342,19 @@
                   <div
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
-                    <h4>Web Development</h4>
-                    <p class="price">$169</p>
+                    <!-- <a href="https://drive.google.com/file/d/1S2S-LDAkIjRIGa_5t1ww4RyPier2G2_s/view" target="_blank"><h4>Conheça mais</h4></a> -->
+                    <h4>Linguas</h4>
                   </div>
 
-                  <h3><a href="course-details.html">Website Design</a></h3>
-                  <p>
-                    Et architecto provident deleniti facere repellat nobis iste.
-                    Id facere quia quae dolores dolorem tempore.
+                  <h3>
+                    <a href="course-details.html">Ensino Bílingue</a>
+                  </h3>
+                  <p style="text-align: justify">
+                    O nosso projeto educacional permite à escola e aos estudantes enfrentaram os desafios de uma sociedade
+                    baseada em conhecimento. Este é o objetivo do nosso projeto educacional. Vemos a língua inglesa como uma porta
+                    aberta para o mundo, trazendo a oportunidade de desenvolver a comunicação e entendimento além das fronteiras.
                   </p>
-                  <div
+                  <!-- <div
                     class="trainer d-flex justify-content-between align-items-center"
                   >
                     <div class="trainer-profile d-flex align-items-center">
@@ -379,7 +369,7 @@
                       <i class="bx bx-user"></i>&nbsp;50 &nbsp;&nbsp;
                       <i class="bx bx-heart"></i>&nbsp;65
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -398,12 +388,12 @@
                   <div
                     class="d-flex justify-content-between align-items-center mb-3"
                   >
-                    <h4>Marketing</h4>
+                    <h4>Robótica</h4>
                     <p class="price">$250</p>
                   </div>
 
                   <h3>
-                    <a href="course-details.html">Search Engine Optimization</a>
+                    <a href="course-details.html">Robótica Educacional</a>
                   </h3>
                   <p>
                     Et architecto provident deleniti facere repellat nobis iste.
