Melhoria na compressão das imagens

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
               data-aos="fade-left"
               data-aos-delay="100"
             >
-              <img src="assets/img/about.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/_about_resolucao_site.png" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
               <ul>
