Melhoria na compressão das imagens e organização de código

--- a/about.html
+++ b/about.html
@@ -1,24 +1,19 @@
-!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Educandário Jesus Menino</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
 
-    <!-- Favicons -->
     <link href="assets/img/favicon.jpg" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon" />
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,15 +28,7 @@
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-
-    <!-- =======================================================
-  * Template Name: Mentor - v2.2.0
-  * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body>
@@ -63,8 +50,6 @@
             <li><a href="index.html">Início</a></li>
             <li class="active"><a href="about.html">Sobre Nós</a></li>
             <li><a href="courses.html">Espaços</a></li>
-            <!-- <li><a href="trainers.html">Nossa Equipe</a></li> -->
-            <!-- <li><a href="events.html">Regimento Escolar</a></li> -->
             <li>
               <a href="https://siga.activesoft.com.br/login/" target="_blank"
                 >Sistema Acadêmico</a
@@ -108,7 +93,11 @@
               data-aos="fade-left"
               data-aos-delay="100"
             >
-              <img src="assets/img/_about_resolucao_site.png" class="img-fluid" alt="" />
+              <img
+                src="assets/img/_about_resolucao_site.png"
+                class="img-fluid"
+                alt=""
+              />
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
               <ul>
@@ -301,64 +290,6 @@
                 <strong>Email:</strong> ejmconecta@eduejmcn.com <br />
               </p>
             </div>
-
-            <!-- <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Terms of service</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Privacy policy</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Web Development</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Product Management</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Graphic Design</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>
-              Tamen quem nulla quae legam multos aute sint culpa legam noster
-              magna
-            </p>
-            <form action="" method="post">
-              <input type="email" name="email" /><input type="submit" value="Subscribe" />
-            </form>
-          </div> -->
           </div>
         </div>
       </div>
@@ -375,7 +306,6 @@
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a
             href="https://www.facebook.com/Educand%C3%A1rio-Jesus-Menino-235038766535770"
             target="_blank"
@@ -388,8 +318,6 @@
             class="instagram"
             ><i class="bx bxl-instagram"></i
           ></a>
-          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
         </div>
       </div>
     </footer>
