--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Educandário Jesus Menino</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
 
-    <!-- Favicons -->
     <link href="assets/img/favicon.jpg" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon" />
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,7 +28,6 @@
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -41,7 +35,6 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <!-- <h1 class="logo mr-auto"><a href="index.html">Jesus Menino</a></h1> -->
         <a href="index.html" class="logo mr-auto"
           ><img
             src="assets/img/LOGO-EJM-AZUL OK.png"
@@ -56,8 +49,6 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
             <li><a href="courses.html">Espaços</a></li>
-            <!-- <li><a href="trainers.html">Nossa Equipe</a></li> -->
-            <!-- <li><a href="events.html">Regimento Escolar</a></li> -->
             <li>
               <a href="https://siga.activesoft.com.br/login/" target="_blank"
                 >Sistema Acadêmico</a
@@ -90,13 +81,6 @@
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
         <div data-aos="fade-up">
-          <!-- <iframe
-            style="border: 0; width: 100%; height: 350px"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-            frameborder="0"
-            allowfullscreen
-          ></iframe> -->
-
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15864.008379009745!2d-36.51114!3d-6.2634528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf464d688fefc7e75!2sEducand%C3%A1rio%20Jesus%20Menino!5e0!3m2!1spt-BR!2sbr!4v1611625361290!5m2!1spt-BR!2sbr"
             width="1920"
