--- a/courses.html
+++ b/courses.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Educandário Jesus Menino</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
 
-    <!-- Favicons -->
     <link href="assets/img/favicon.jpg" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon" />
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,7 +28,6 @@
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
@@ -41,7 +35,6 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <!-- <h1 class="logo mr-auto"><a href="index.html">Jesus Menino</a></h1> -->
         <a href="index.html" class="logo mr-auto"
           ><img
             src="assets/img/LOGO-EJM-AZUL OK.png"
@@ -56,8 +49,6 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="about.html">Sobre Nós</a></li>
             <li class="active"><a href="courses.html">Espaços</a></li>
-            <!-- <li><a href="trainers.html">Nossa Equipe</a></li> -->
-            <!-- <li><a href="events.html">Regimento Escolar</a></li> -->
             <li>
               <a href="https://siga.activesoft.com.br/login/" target="_blank"
                 >Sistema Acadêmico</a
@@ -83,22 +74,13 @@
       <div class="breadcrumbs">
         <div class="container">
           <h2>Nossos Espaços</h2>
-          <!-- <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit
-          quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p> -->
         </div>
       </div>
       <!-- End Breadcrumbs -->
 
-      <!-- ======= Courses Section ======= -->
-
       <!-- ======= Testimonials Section ======= -->
       <section id="testimonials" class="testimonials">
         <div class="container" data-aos="fade-up">
-          <!-- <div class="section-title">
-            <h2>Testimonials</h2>
-            <p>What are they saying</p>
-          </div> -->
-
           <div
             class="owl-carousel testimonials-carousel"
             data-aos="zoom-in"
@@ -228,64 +210,6 @@
                 <strong>Email:</strong> ejmconecta@eduejmcn.com <br />
               </p>
             </div>
-
-            <!-- <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Terms of service</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Privacy policy</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Web Design</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Web Development</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Product Management</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
-              </li>
-              <li>
-                <i class="bx bx-chevron-right"></i>
-                <a href="#">Graphic Design</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>
-              Tamen quem nulla quae legam multos aute sint culpa legam noster
-              magna
-            </p>
-            <form action="" method="post">
-              <input type="email" name="email" /><input type="submit" value="Subscribe" />
-            </form>
-          </div> -->
           </div>
         </div>
       </div>
@@ -302,7 +226,6 @@
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a
             href="https://www.facebook.com/Educand%C3%A1rio-Jesus-Menino-235038766535770"
             target="_blank"
@@ -315,8 +238,6 @@
             class="instagram"
             ><i class="bx bxl-instagram"></i
           ></a>
-          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
         </div>
       </div>
     </footer>
