--- a/about.html
+++ b/about.html
@@ -313,7 +313,7 @@
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
-            href="https://www.instagram.com/p/CKWf5KCBDoP/"
+            href="https://www.instagram.com/ejmcurraisnovos/"
             target="_blank"
             class="instagram"
             ><i class="bx bxl-instagram"></i
