--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                       <p>Voleibol</p>
                       <p>Natação</p>
                       <p>Atletismo</p>
-                      <p>Hisroginástica</p>
+                      <p>Hidroginástica</p>
                       <p>Judô</p>
                       <p>Ballet</p>
                     </div>
